set(SRCROOT ${PROJECT_SOURCE_DIR}/gui/test)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/gui/bin)

add_executable(lxgui-test
    ${SRCROOT}/main.cpp
)

target_include_directories(lxgui-test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories(lxgui-test PRIVATE ${PROJECT_SOURCE_DIR}/sol2/include)
target_include_directories(lxgui-test PRIVATE ${LUA_INCLUDE_DIR})
if (NOT EMSCRIPTEN)
    if(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SFML")
        target_include_directories(lxgui-test PRIVATE ${FREETYPE_INCLUDE_DIRS})
        target_include_directories(lxgui-test PRIVATE ${PNG_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${ZLIB_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${OPENGL_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${SFML_INCLUDE_DIR})
    elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SDL")
        target_include_directories(lxgui-test PRIVATE ${FREETYPE_INCLUDE_DIRS})
        target_include_directories(lxgui-test PRIVATE ${PNG_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${ZLIB_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${OPENGL_INCLUDE_DIR})
        target_include_directories(lxgui-test PRIVATE ${SDL2_INCLUDE_DIRS})
    elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SDL")
        target_include_directories(lxgui-test PRIVATE ${SDL2_INCLUDE_DIRS})
        target_include_directories(lxgui-test PRIVATE ${SDL2_TTF_INCLUDE_DIRS})
        target_include_directories(lxgui-test PRIVATE ${SDL2_IMAGE_INCLUDE_DIRS})
    elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SFML")
        target_include_directories(lxgui-test PRIVATE ${SFML_INCLUDE_DIR})
    endif()
else()
    set(TEST_EMSCRIPTEN_USE_FLAGS "-s ALLOW_MEMORY_GROWTH=1 --preload-file ${PROJECT_SOURCE_DIR}/gui/bin/interface@interface")
    if(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SDL")
        set(TEST_EMSCRIPTEN_USE_FLAGS "${TEST_EMSCRIPTEN_USE_FLAGS} -s USE_SDL=2 -s USE_LIBPNG=1 -s USE_FREETYPE=1 -s MIN_WEBGL_VERSION=2")
    elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SDL")
        set(TEST_EMSCRIPTEN_USE_FLAGS "${TEST_EMSCRIPTEN_USE_FLAGS} -s USE_SDL=2 -s USE_SDL_IMAGE=2 -s SDL2_IMAGE_FORMATS='[\"png\"]' -s USE_SDL_TTF=2")
    endif()
    set_target_properties(lxgui-test PROPERTIES COMPILE_FLAGS ${TEST_EMSCRIPTEN_USE_FLAGS})
    set_target_properties(lxgui-test PROPERTIES LINK_FLAGS "${TEST_EMSCRIPTEN_USE_FLAGS} --shell-file ${SRCROOT}/emscripten_shell.html")
endif()

if(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SFML")
    target_compile_definitions(lxgui-test PRIVATE GLSFML_GUI)
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SDL")
    target_compile_definitions(lxgui-test PRIVATE GLSDL_GUI)
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SDL")
    target_compile_definitions(lxgui-test PRIVATE SDL_GUI)
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SFML")
    target_compile_definitions(lxgui-test PRIVATE SFML_GUI)
endif()

if(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SFML")
    target_link_libraries(lxgui-test lxgui-gl)
    target_link_libraries(lxgui-test lxgui-input-sfml)
    target_link_libraries(lxgui-test ${FREETYPE_LIBRARY})
    target_link_libraries(lxgui-test ${PNG_LIBRARY})
    target_link_libraries(lxgui-test ${ZLIB_LIBRARY})
    target_link_libraries(lxgui-test ${OPENGL_LIBRARY})
    target_link_libraries(lxgui-test ${GLEW_LIBRARY})
    target_link_libraries(lxgui-test ${SFML_GRAPHICS_LIBRARY})
    target_link_libraries(lxgui-test ${SFML_WINDOW_LIBRARY})
    target_link_libraries(lxgui-test ${SFML_SYSTEM_LIBRARY})
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "OPENGL_SDL")
    target_link_libraries(lxgui-test lxgui-gl)
    target_link_libraries(lxgui-test lxgui-input-sdl)
    if (NOT EMSCRIPTEN)
        target_link_libraries(lxgui-test ${FREETYPE_LIBRARY})
        target_link_libraries(lxgui-test ${PNG_LIBRARY})
        target_link_libraries(lxgui-test ${ZLIB_LIBRARY})
        target_link_libraries(lxgui-test ${OPENGL_LIBRARY})
        target_link_libraries(lxgui-test ${GLEW_LIBRARY})
        target_link_libraries(lxgui-test ${SDL2_LIBRARIES})
        target_link_libraries(lxgui-test ${SDL2_IMAGE_LIBRARIES})
    endif()
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SDL")
    target_link_libraries(lxgui-test lxgui-sdl)
    target_link_libraries(lxgui-test lxgui-input-sdl)
    if (NOT EMSCRIPTEN)
        target_link_libraries(lxgui-test ${SDL2_LIBRARIES})
        target_link_libraries(lxgui-test ${SDL2_TTF_LIBRARIES})
        target_link_libraries(lxgui-test ${SDL2_IMAGE_LIBRARIES})
    endif()
elseif(LXGUI_TEST_IMPLEMENTATION STREQUAL "SFML")
    target_link_libraries(lxgui-test lxgui-sfml)
    target_link_libraries(lxgui-test lxgui-input-sfml)
    target_link_libraries(lxgui-test ${SFML_GRAPHICS_LIBRARY})
    target_link_libraries(lxgui-test ${SFML_WINDOW_LIBRARY})
    target_link_libraries(lxgui-test ${SFML_SYSTEM_LIBRARY})
endif()

target_link_libraries(lxgui-test lxgui)
target_link_libraries(lxgui-test lxgui-luapp)
target_link_libraries(lxgui-test lxgui-xml)
target_link_libraries(lxgui-test lxgui-utils)
target_link_libraries(lxgui-test ${LUA_LIBRARIES})

if(WINDOWS AND MSVC)
    target_link_libraries(lxgui-test user32)
endif()
if(UNIX AND NOT (APPLE OR EMSCRIPTEN))
    target_link_libraries(lxgui-test X11 m stdc++ stdc++fs)
endif()
